--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -6,14 +6,14 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: ingest-app-1.0
+      app: ingest-app
   template:
     metadata:
       labels:
-        app: ingest-app-1.0
+        app: ingest-app
     spec:
       containers:
-      - name: ingest-container-1.0
+      - name: ingest-container
         image: gcr.io/bitcamp-2023/ingest-container:1.0
         resources:
           limits:
